tests/should_fail/type_option_assign_raw.nv
module type_option_assign_raw
// Should fail: assigning raw Int to Option(Int) typed variable
let x: Option(Int) = 42
